@@ -5,7 +5,7 @@
 	<description/>
 	<post-install type="none"/>
 	<requireAuthorization/>
-	<installFrom>/home/lordyesta/Projects/liblnk/macosx/tmp/share</installFrom>
+	<installFrom>/usr/local/google/home/jbmetz/Projects/liblnk/macosx/tmp/share</installFrom>
 	<installTo mod="true">/usr</installTo>
 	<flags>
 		<followSymbolicLinks/>
