@@ -56,6 +56,7 @@ Bindings:
 * 2014 update
 * updated dependencies
 * worked on Python bindings
+  - changes regarding integer object signedness on 32-bit architectures
 
 20131015
 * updated dependencies
